deploy/proxyglass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxyglass
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxyglass
  template:
    metadata:
      labels:
        app: proxyglass
    spec:
      containers:
        - name: proxyglass
          image: proxyglass:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: proxy
              containerPort: 3128
            - name: mgmt
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9090
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop: ["ALL"]
---
apiVersion: v1
kind: Service
metadata:
  name: proxyglass
  namespace: monitor
spec:
  selector:
    app: proxyglass
  ports:
    - name: proxy
      port: 3128
      targetPort: 3128
    - name: mgmt
      port: 9090
      targetPort: 9090
  type: ClusterIP
